// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<div class="tabs">
  <nav class="items"><a href="#" class="item item--active">
      <!----> One</a><a href="#" class="item">
      <!----> Two</a></nav>
  <div class="panel" tag="div" name="slide-down" mode="out-in">
    <div>One Content</div>
  </div>
</div>
`;

exports[`Tabs renders correct panels 1`] = `
<div class="tabs">
  <nav class="items"><a href="#" class="item item--active">
      <!----> One</a><a href="#" class="item">
      <!----> Two</a></nav>
  <div class="panel" tag="div" name="slide-down" mode="out-in">
    <div>One Content</div>
  </div>
</div>
`;

exports[`Tabs renders correct panels 2`] = `
<div class="tabs">
  <nav class="items"><a href="#" class="item">
      <!----> One</a><a href="#" class="item item--active">
      <!----> Two</a></nav>
  <div class="panel" tag="div" name="slide-down" mode="out-in">
    <div>Two Content</div>
  </div>
</div>
`;

exports[`Tabs renders with theme 1`] = `
<div class="one">
  <nav class="two"><a href="#" class="three three--active">
      <!----> One</a><a href="#" class="three">
      <!----> Two</a></nav>
  <div class="four" tag="div" name="slide-down" mode="out-in">
    <div>One Content</div>
  </div>
</div>
`;

exports[`Tabs renders without slots 1`] = `
<div class="tabs">
  <nav class="items"></nav>
  <div class="panel" tag="div" name="slide-down" mode="out-in"></div>
</div>
`;
